--- a/package.json
+++ b/package.json
@@ -34,17 +34,22 @@
   },
   "homepage": "https://github.com/davorbadrov/api-boilerplate#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "blipp": "^2.3.0",
     "boom": "^5.2.0",
     "dotenv": "^4.0.0",
     "eslint": "^4.4.1",
     "good": "^7.2.0",
     "good-console": "^6.4.0",
+    "good-squeeze": "^5.0.2",
     "hapi": "^16.5.2",
+    "hapi-auth-jwt2": "^7.3.0",
     "joi": "^10.6.0",
+    "jsonwebtoken": "^7.4.3",
     "knex": "^0.13.0",
     "lodash": "^4.17.4",
-    "pg": "^7.1.2"
+    "pg": "^7.1.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
