--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier-standard 'src/**/*.js'",
     "precommit": "lint-staged",
     "migrate": "sequelize db:migrate:all",
-    "seed": "sequelize db:seed:all"
+    "seed": "sequelize db:seed:all",
+    "debug": "node --nolazy --inspect-brk index.js"
   },
   "lint-staged": {
     "linters": {
@@ -44,8 +45,9 @@
     "good": "^7.2.0",
     "good-console": "^6.4.0",
     "good-squeeze": "^5.0.2",
-    "hapi": "^16.5.2",
+    "hapi": "16.6.2",
     "hapi-auth-jwt2": "^7.3.0",
+    "inert": "4.2.1",
     "joi": "^10.6.0",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
